--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,4 @@ streamlit>=1.31.1
 python-dotenv>=1.0.0
 setuptools>=65.5.0  # Ensuring build tools are available
 wheel>=0.40.0  # Helps with package installations
+requests>=2.31.0  # For making HTTP requests to the backend API
